On and on it goes: Errors Messages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>It was 2FA still working?</title>
+<title>It was 2FA still working? Yes.</title>
 </head>
 
 <body>
