--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>It was 2FA still working? Yes.</title>
+    <meta charset="UTF-8">
+    <title>It was 2FA still working? Yes.</title>
 </head>
+<!-- <ul class="navbar"></ul> -->
 
 <body>
 </body>
+
 </html>
