Added Embedded Projector Video and ML Text

--- a/index.html
+++ b/index.html
@@ -100,16 +100,15 @@
         </section>
         <div class="row example">
           <a class="example-screenshot-wrapper" target="_blank" href="examples/landing">
-            <video width="400" controls autoplay>
+            <video width="400" controls>
               <source src="video/NLP.mov" type="video/mp4">
           </video>
-            
           </a>
           <div class="one-half offset-by-one-half column">
             <h6 class="example-header">MACHINE LEARNING</h6>
-            <p class="example-description">This template is an example of how easy it can be to create a landing page with just the Skeleton grid and a few custom styles. The entire demo is ~150 lines of CSS including comments (most of which is positioning the phones at the top).</p>
-            <a class="button" href="examples/landing" target="_blank">Demo</a>
-            <a class="button" href="https://github.com/dhg/Skeleton/tree/gh-pages/examples/landing" target="_blank">Source</a>
+            <p class="example-description">During 2019 I have written 2 scientific papers on malicious use of ML technologies and ML in the context the circular economy principle. To be way beyond buzzwords I also digged into the coding and theory of ML with the help of outstanding tutorials on <a href="https://www.tensorflow.org/tutorials">tensorflow.org</a>, <a href="https://www.coursera.org/learn/natural-language-processing-tensorflow/home/welcome">Coursera</a> and <a href="https://www.udemy.com/machine-learning-with-tensorflow-for-business-intelligence/">Udemy</a></p>
+            <a class="button" href="https://github.com/FrederikNiesner/NLP" target="_blank">github</a>
+            <a class="button" href="https://projector.tensorflow.org/?config=%3Cscript%20src=%22https://gist.github.com/FrederikNiesner/0d7a259e1307d878d3bcdafa93c7732b.js%22%3E%3C/script%3E" target="_blank">Projector</a>
           </div>
         </div>
         <div class="row example">
