--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   </video>
                 </a>
                 <div class="one-half offset-by-one-half column">
-                  <h6 class="example-header">The Portfolio Project</h6>
+                  <h6 class="example-header">The Portfolio</h6>
                   <p class="example-description">One design accross webpage, cv documents and business cards. 3 months of self enablement in HTML, CSS, JS via <a href="https://scrimba.com/">Scrimba</a> and <a href="https://www.freecodecamp.org/">Free Code Camp</a> and hours of <a href="https://giphy.com/gifs/internet-apple-technology-xTiN0L7EW5trfOvEk0/fullscreen">Trial and Error</a> made this beautiful project come true for me.</p>
                   <a class="button" href="https://github.com/FrederikNiesner/Portfolio_Website" target="_blank">github</a>
                   <a class="button" href="https://projector.tensorflow.org/?config=%3Cscript%20src=%22https://gist.github.com/FrederikNiesner/0d7a259e1307d878d3bcdafa93c7732b.js%22%3E%3C/script%3E" target="_blank">Projector</a>
